# logp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml  publish-validation.yml  publish.yml
docs/: ENTROPY_CALIBRATION_INTEGRATION.md  ENTROPY_CALIBRATION_PRACTICAL.md  ENTROPY_CALIBRATION_SUMMARY.md
examples/: README.md  distance_families.rs  divergence_landscape.rs  feature_selection.rs  ksg_multivariate.rs  ksg_mutual_information.rs  text_similarity.rs
src/: distprop.rs  entropy_calibration.rs  fdiv.rs  ksg.rs  lib.rs  quantize.rs  unseen.rs  zipf.rs
tests/: edge_cases.rs  info_theory_references.rs  proptest_quantize.rs  rosetta_logp.rs
tests/fixtures/rosetta/: gen_logp.py  logp_infotheory.json
